--- a/MetalWork/wwwroot/css/site.css
+++ b/MetalWork/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.form-main {
+    margin-top: 10px;
+    width: 300px;
+    height: 40px;
+}
+
+.main-footer {
+    margin-top: 10px;
+}
+
+.submit-buttom {
+    margin-right: 135px;
+}
