--- a/MetalWork/Views/Home/Index.cshtml
+++ b/MetalWork/Views/Home/Index.cshtml
@@ -2,10 +2,4 @@
     ViewData["Title"] = "Home Page";
 }
 
-@foreach (var p in Model)
-{
-    @p.Count
-    @p.Material.Name
-    @p.Product.Name
-    @p.Product.Price
-}
+<a href="~/Customer/Index">Клиенты</a>
