--- a/MetalWork/Views/Product/Edit.cshtml
+++ b/MetalWork/Views/Product/Edit.cshtml
@@ -15,6 +15,29 @@
 }
 
 <style>
+      .submit-buttom
+    {
+
+        width:100px;
+        height:40px;
+        background-color: black;
+        padding:4px;
+      
+    
+ 
+        color:white;
+        text-decoration:none;
+        border-radius:4px;
+
+   
+    }
+    .submit-buttom:hover{
+          text-decoration:none;
+          background-color:white;
+          color:black;
+          transition:1s;
+          border:1px solid black;
+    }
     .form-main {
         margin-top: 10px;
         width: 300px;
