--- a/MetalWork/Views/Product/Index.cshtml
+++ b/MetalWork/Views/Product/Index.cshtml
@@ -2,16 +2,22 @@
     ViewBag.Title = "Продаваемый товар";
 }
 
-@Html.ActionLink("Добавить", "Create")
 
-<table>
+
+<div class="knopka">           
+
+
+    <a class="txtdb" href="~/Customer/Create"> Добавить </a>
+
+</div>
+<table class="table table-border cell-border">
     <tr>
         <th>Название</th>
         <th>Цена</th>
     </tr>
     @foreach (var p in Model)
     {
-        <tr>
+        <tr class="qtr">
             <td>@p.Name</td>
             <td>@p.Price</td>
             <td>@Html.ActionLink("Редактировать", "Edit", new { id = p.Id })</td>
@@ -19,3 +25,61 @@
         </tr>
     }
 </table>
+<style>
+
+     .knopka
+    {
+
+        margin-bottom:20px;
+
+    }
+    .txtdb
+    {
+
+        width:200px;
+        height:100px;
+        background-color: black;
+        padding:4px;
+        font-size: 20px;
+    
+ 
+        color:white;
+        text-decoration:none;
+        border-radius:4px;
+
+   
+    }
+    .txtdb:hover{
+          text-decoration:none;
+          background-color:white;
+          color:black;
+          transition:1s;
+          border:1px solid black;
+    }
+    
+    
+th{
+    padding-right: 35px;
+     padding-left: 35px;
+}
+/* границы ячеек тела таблицы */
+td {/*
+     padding: 0px 20px 0px 20px;*/
+     padding-right: 35px;
+     padding-left: 35px;
+    
+}
+
+.table-border
+{
+
+    border: 2px solid black;
+}
+
+
+.qtr:hover
+{
+     background: #fbffd9;
+
+}
+</style>
