--- a/MetalWork/Views/ProductComposition/Create.cshtml
+++ b/MetalWork/Views/ProductComposition/Create.cshtml
@@ -15,3 +15,28 @@
         @Html.ActionLink("Отменить", "Index")
     </div>
 }
+<style>
+
+  .submit-buttom
+    {
+
+        width:100px;
+        height:40px;
+        background-color: black;
+        padding:4px;
+      
+    
+ 
+        color:white;
+        text-decoration:none;
+        border-radius:4px;
+
+   
+    }
+    .submit-buttom:hover{
+          text-decoration:none;
+          background-color:white;
+          color:black;
+          transition:1s;
+          border:1px solid black;
+    }</style>
